--- a/Project_2_Ноутбук_шаблон.ipynb
+++ b/Project_2_Ноутбук_шаблон.ipynb
@@ -50,7 +50,7 @@
         "# вставьте сюда параметры подключения из юнита 1. Работа с базой данных из Python \n",
         "DBNAME = 'project_sql'\n",
         "USER = 'skillfactory'\n",
-        "PASSWORD = 'cCkxxLVrDE8EbvjueeMedPKt'\n",
+        "PASSWORD = ''\n",
         "HOST = '84.201.134.129'\n",
         "PORT = 5432"
       ]
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 4,
       "id": "bc39e68e-ed02-4ee2-9235-7258a2f867a8",
       "metadata": {
         "id": "bc39e68e-ed02-4ee2-9235-7258a2f867a8"
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 5,
       "id": "7mAwtsk4hEHY",
       "metadata": {
         "id": "7mAwtsk4hEHY"
@@ -154,7 +154,7 @@
               "0  49197"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 6,
       "id": "5408c52c-3407-4a63-b25b-1aafa2322d28",
       "metadata": {
         "id": "5408c52c-3407-4a63-b25b-1aafa2322d28"
@@ -192,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 7,
       "id": "jVL4eshKhdqc",
       "metadata": {
         "id": "jVL4eshKhdqc"
@@ -236,7 +236,7 @@
               "0  23501"
             ]
           },
-          "execution_count": 67,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 8,
       "id": "1m8QJwBYhey6",
       "metadata": {
         "id": "1m8QJwBYhey6"
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 9,
       "id": "EZsn9tlfhe7f",
       "metadata": {
         "id": "EZsn9tlfhe7f"
@@ -318,7 +318,7 @@
               "0   1362"
             ]
           },
-          "execution_count": 69,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 10,
       "id": "d286cf4c-707b-4cd2-9190-7ab3587d04a1",
       "metadata": {
         "id": "d286cf4c-707b-4cd2-9190-7ab3587d04a1"
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 11,
       "id": "JYAaoZ4qhfzW",
       "metadata": {
         "id": "JYAaoZ4qhfzW"
@@ -400,7 +400,7 @@
               "0    294"
             ]
           },
-          "execution_count": 71,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 12,
       "id": "3f069da6-fdc9-4ae7-b514-fafe2675efd3",
       "metadata": {
         "id": "3f069da6-fdc9-4ae7-b514-fafe2675efd3"
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 13,
       "id": "P7QL86hrjhRJ",
       "metadata": {
         "id": "P7QL86hrjhRJ"
@@ -543,7 +543,7 @@
               "4   1892           Алматы"
             ]
           },
-          "execution_count": 74,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -566,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 14,
       "id": "0c44b350-72eb-4d65-8b54-a1fc449ba9fd",
       "metadata": {
         "id": "0c44b350-72eb-4d65-8b54-a1fc449ba9fd"
@@ -582,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 15,
       "id": "rhvwaMDkoWTi",
       "metadata": {
         "id": "rhvwaMDkoWTi"
@@ -626,7 +626,7 @@
               "0  24073"
             ]
           },
-          "execution_count": 76,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -649,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 363,
+      "execution_count": 16,
       "id": "603cdbe4-0ec3-4106-8eaf-c73fcdd29165",
       "metadata": {
         "id": "603cdbe4-0ec3-4106-8eaf-c73fcdd29165"
@@ -666,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 364,
+      "execution_count": 17,
       "id": "pswpAb66ovZZ",
       "metadata": {
         "id": "pswpAb66ovZZ"
@@ -712,7 +712,7 @@
               "0                      71065.0                      110537.0"
             ]
           },
-          "execution_count": 364,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -735,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 18,
       "id": "1ea710ec-871b-431e-9462-c7d0fd87011b",
       "metadata": {
         "id": "1ea710ec-871b-431e-9462-c7d0fd87011b"
@@ -755,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 19,
       "id": "lGUVqavdo4JQ",
       "metadata": {
         "id": "lGUVqavdo4JQ"
@@ -922,7 +922,7 @@
               "17      1    Сменный график     Проектная работа"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -945,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 20,
       "id": "5b3a8e79-f7ab-4008-b767-12aea3a205ea",
       "metadata": {
         "id": "5b3a8e79-f7ab-4008-b767-12aea3a205ea"
@@ -964,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 21,
       "id": "3Is64Y-hpDpq",
       "metadata": {
         "id": "3Is64Y-hpDpq"
@@ -1028,7 +1028,7 @@
               "3  26152  От 1 года до 3 лет"
             ]
           },
-          "execution_count": 82,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1083,7 +1083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 22,
       "id": "f2d62796-d400-4ec1-a675-88112739a50e",
       "metadata": {
         "id": "f2d62796-d400-4ec1-a675-88112739a50e"
@@ -1104,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 23,
       "id": "64tOMkAxqkQk",
       "metadata": {
         "id": "64tOMkAxqkQk"
@@ -1174,7 +1174,7 @@
               "4    331  Газпром нефть"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1198,7 +1198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 378,
+      "execution_count": 24,
       "id": "dd7df27a-e3e8-412e-a21a-5d389b71e891",
       "metadata": {
         "id": "dd7df27a-e3e8-412e-a21a-5d389b71e891"
@@ -1221,7 +1221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 379,
+      "execution_count": 25,
       "id": "x1ikWbydrbf6",
       "metadata": {
         "id": "x1ikWbydrbf6"
@@ -1269,7 +1269,7 @@
               "0    Россия      0    410"
             ]
           },
-          "execution_count": 379,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1292,7 +1292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 26,
       "id": "6271f8ad-bd2e-4196-ae4a-5b39c4c1010e",
       "metadata": {
         "id": "6271f8ad-bd2e-4196-ae4a-5b39c4c1010e"
@@ -1315,7 +1315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 27,
       "id": "1EIvX3HasH4F",
       "metadata": {
         "id": "1EIvX3HasH4F"
@@ -1424,7 +1424,7 @@
               "[14766 rows x 2 columns]"
             ]
           },
-          "execution_count": 89,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1447,7 +1447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 28,
       "id": "80defb23-bfb1-4a18-8be6-bf36aa7165d5",
       "metadata": {
         "id": "80defb23-bfb1-4a18-8be6-bf36aa7165d5"
@@ -1467,7 +1467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 29,
       "id": "Dp_yCx6ysQSu",
       "metadata": {
         "id": "Dp_yCx6ysQSu"
@@ -1511,7 +1511,7 @@
               "0   8419"
             ]
           },
-          "execution_count": 91,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1534,7 +1534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 30,
       "id": "973b0cfc-a972-470a-8b4a-68744ef220c4",
       "metadata": {
         "id": "973b0cfc-a972-470a-8b4a-68744ef220c4"
@@ -1558,7 +1558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 31,
       "id": "xsPtpp8EsaED",
       "metadata": {
         "id": "xsPtpp8EsaED"
@@ -1604,7 +1604,7 @@
               "0      4  2ГИС"
             ]
           },
-          "execution_count": 93,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1627,7 +1627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 32,
       "id": "ad3f270f-2991-47eb-929b-e8f88a55b0d1",
       "metadata": {
         "id": "ad3f270f-2991-47eb-929b-e8f88a55b0d1"
@@ -1646,7 +1646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 33,
       "id": "H72qxWM0shPR",
       "metadata": {
         "id": "H72qxWM0shPR"
@@ -1690,7 +1690,7 @@
               "0   3553"
             ]
           },
-          "execution_count": 95,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1717,7 +1717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 34,
       "id": "ZdfrL6gIs1Pn",
       "metadata": {
         "id": "ZdfrL6gIs1Pn"
@@ -1746,7 +1746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 35,
       "id": "9e382b69",
       "metadata": {},
       "outputs": [],
@@ -1772,7 +1772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 36,
       "id": "ttPhiO1rsvPq",
       "metadata": {
         "id": "ttPhiO1rsvPq"
@@ -1914,7 +1914,7 @@
               "16            total  485.0"
             ]
           },
-          "execution_count": 98,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1974,7 +1974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 37,
       "id": "54ab0e50-c0f1-47cc-a54b-bc5c8bc363f9",
       "metadata": {
         "id": "54ab0e50-c0f1-47cc-a54b-bc5c8bc363f9"
@@ -1992,7 +1992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 38,
       "id": "9F1meAqsuUjd",
       "metadata": {
         "id": "9F1meAqsuUjd"
@@ -2036,7 +2036,7 @@
               "0   1771"
             ]
           },
-          "execution_count": 101,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2074,7 +2074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 39,
       "id": "9c61b3c0-bb66-46c9-ae1e-81d3f5752b4a",
       "metadata": {
         "id": "9c61b3c0-bb66-46c9-ae1e-81d3f5752b4a"
@@ -2097,7 +2097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 40,
       "id": "ZNM-LLYuu1dj",
       "metadata": {
         "id": "ZNM-LLYuu1dj"
@@ -2141,7 +2141,7 @@
               "0     51"
             ]
           },
-          "execution_count": 103,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2166,7 +2166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 41,
       "id": "69621713-0cc5-4f1b-a1d7-bb144fa6148c",
       "metadata": {
         "id": "69621713-0cc5-4f1b-a1d7-bb144fa6148c"
@@ -2189,7 +2189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 42,
       "id": "alA8WEAAvGdf",
       "metadata": {
         "id": "alA8WEAAvGdf"
@@ -2233,7 +2233,7 @@
               "0    201"
             ]
           },
-          "execution_count": 105,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2258,7 +2258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 43,
       "id": "0036a355-9ccf-4564-8b01-73d8194297e7",
       "metadata": {
         "id": "0036a355-9ccf-4564-8b01-73d8194297e7"
@@ -2281,7 +2281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 44,
       "id": "1i-5WyucvQ6v",
       "metadata": {
         "id": "1i-5WyucvQ6v"
@@ -2325,7 +2325,7 @@
               "0    351"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2349,7 +2349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 45,
       "id": "18b57d91",
       "metadata": {},
       "outputs": [],
@@ -2378,7 +2378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 46,
       "id": "a3V24Tvmviqk",
       "metadata": {
         "id": "a3V24Tvmviqk"
@@ -2487,7 +2487,7 @@
               "[432 rows x 2 columns]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2517,7 +2517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 357,
+      "execution_count": 47,
       "id": "6a743d39-5204-48d3-8271-b9f88e68d40e",
       "metadata": {
         "id": "6a743d39-5204-48d3-8271-b9f88e68d40e"
@@ -2549,7 +2549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 358,
+      "execution_count": 48,
       "id": "aRIJ0mZEwU1_",
       "metadata": {
         "id": "aRIJ0mZEwU1_"
@@ -2593,7 +2593,7 @@
               "0  243115.0"
             ]
           },
-          "execution_count": 358,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2655,7 +2655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 49,
       "id": "h9B3BL-wwj18",
       "metadata": {
         "id": "h9B3BL-wwj18"
@@ -2682,7 +2682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 50,
       "id": "de874afe",
       "metadata": {},
       "outputs": [
@@ -2825,7 +2825,7 @@
               "9   54248.322581  106654.000000  "
             ]
           },
-          "execution_count": 12,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
