--- a/Project_2_Ноутбук_шаблон.ipynb
+++ b/Project_2_Ноутбук_шаблон.ipynb
@@ -427,7 +427,7 @@
       "metadata": {},
       "source": [
         "# выводы по предварительному анализу данных\n",
-        "Получили  общие показатели по базе данных,  почти 50 000 вакансий разделили между собой 23 500 работадателей, которые расположены в огрномном кол-ве регионов (1362) и кроме того в 300 сферах дейстельности. Можно утверждать, что в вакансии есть на огромной территории.\n"
+        "Получили  общие показатели по базе данных,  почти 50 000 вакансий разделили между собой 23 500 работадателей, которые расположены в огрномном кол-ве регионов (1362) и кроме того в 300 сферах деятельности. Можно утверждать, что вакансии есть на огромной территории.\n"
       ]
     },
     {
@@ -2682,7 +2682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 51,
       "id": "de874afe",
       "metadata": {},
       "outputs": [
@@ -2825,7 +2825,7 @@
               "9   54248.322581  106654.000000  "
             ]
           },
-          "execution_count": 50,
+          "execution_count": 51,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2834,6 +2834,189 @@
         "# результат запроса\n",
         "df = pd.read_sql_query(query_bonus1, connection)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2e33a4de",
+      "metadata": {},
+      "source": [
+        "#Вывод по бонусу 1\n",
+        "Можно сказать, что вакансии в IT-сфере спокойно переехал на удаленный режим, без потерь в зарплате. Добро пожаловать в пост-COVID-ный мир."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
+      "id": "b73456b4",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# текст запроса\n",
+        "query_bonus2 = f'''select \n",
+        "            v.name,\n",
+        "            v.key_skills,\n",
+        "            i.name\n",
+        "            from public.VACANCIES v\n",
+        "            LEFT JOIN public.EMPLOYERS_INDUSTRIES ei ON v.employer_id = ei.employer_id\n",
+        "            LEFT JOIN public.EMPLOYERS e ON v.employer_id=e.id\n",
+        "            LEFT JOIN public.INDUSTRIES i ON i.id=ei.industry_id\n",
+        "            WHERE e.name = 'Поляков Денис Иванович'\n",
+        "            ORDER  BY 1\n",
+        "'''"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "id": "54ea3c9f",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>key_skills</th>\n",
+              "      <th>name</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Компьютерный мастер</td>\n",
+              "      <td>Техники продаж\\tУверенный пользователь ПК\\tРем...</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Компьютерный мастер</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Компьютерный мастер</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Компьютерный мастер</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Компьютерный мастер</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>122</th>\n",
+              "      <td>Ученик компьютерного мастера</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>123</th>\n",
+              "      <td>Ученик компьютерного мастера</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>124</th>\n",
+              "      <td>Ученик компьютерного мастера</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>125</th>\n",
+              "      <td>Ученик компьютерного мастера</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>126</th>\n",
+              "      <td>Ученик компьютерного мастера</td>\n",
+              "      <td>None</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>127 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                             name  \\\n",
+              "0             Компьютерный мастер   \n",
+              "1             Компьютерный мастер   \n",
+              "2             Компьютерный мастер   \n",
+              "3             Компьютерный мастер   \n",
+              "4             Компьютерный мастер   \n",
+              "..                            ...   \n",
+              "122  Ученик компьютерного мастера   \n",
+              "123  Ученик компьютерного мастера   \n",
+              "124  Ученик компьютерного мастера   \n",
+              "125  Ученик компьютерного мастера   \n",
+              "126  Ученик компьютерного мастера   \n",
+              "\n",
+              "                                            key_skills  name  \n",
+              "0    Техники продаж\\tУверенный пользователь ПК\\tРем...  None  \n",
+              "1                                                 None  None  \n",
+              "2                                                 None  None  \n",
+              "3                                                 None  None  \n",
+              "4                                                 None  None  \n",
+              "..                                                 ...   ...  \n",
+              "122                                               None  None  \n",
+              "123                                               None  None  \n",
+              "124                                               None  None  \n",
+              "125                                               None  None  \n",
+              "126                                               None  None  \n",
+              "\n",
+              "[127 rows x 3 columns]"
+            ]
+          },
+          "execution_count": 69,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# результат запроса\n",
+        "df = pd.read_sql_query(query_bonus2, connection)\n",
+        "df"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e864fec9",
+      "metadata": {},
+      "source": [
+        "Судя по всему Поляков Д.И. владелец сети сервисных центров."
       ]
     }
   ],
