--- a/BLOCK2_Project_2_HH.ipynb
+++ b/BLOCK2_Project_2_HH.ipynb
@@ -48,11 +48,11 @@
       "outputs": [],
       "source": [
         "# вставьте сюда параметры подключения из юнита 1. Работа с базой данных из Python \n",
-        "DBNAME = 'project_sql'\n",
-        "USER = 'skillfactory'\n",
+        "DBNAME = ''\n",
+        "USER = ''\n",
         "PASSWORD = ''\n",
-        "HOST = '84.201.134.129'\n",
-        "PORT = 5432"
+        "HOST = ''\n",
+        "PORT = "
       ]
     },
     {
