--- a/BLOCK2_Project_2_HH.ipynb
+++ b/BLOCK2_Project_2_HH.ipynb
@@ -2842,7 +2842,7 @@
       "metadata": {},
       "source": [
         "#Вывод по бонусу 1\n",
-        "Можно сказать, что вакансии в IT-сфере спокойно переехал на удаленный режим, без потерь в зарплате. Добро пожаловать в пост-COVID-ный мир."
+        "Можно сказать, что вакансии в IT-сфере спокойно переехали на удаленный режим, без потерь в зарплате. Добро пожаловать в пост-COVID-ный мир."
       ]
     },
     {
