--- a/EDA-4. СТАТИСТИЧЕСКИЕ ТЕСТЫ (HW-03).ipynb
+++ b/EDA-4. СТАТИСТИЧЕСКИЕ ТЕСТЫ (HW-03).ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "7         0.103443   0.0689"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -244,29 +244,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.05 #уроевень значимости"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H0 = 'Нет значимой разницы между размером мидии в разных городах.'\n",
+    "Ha = 'Есть значимая разница между размером мидии в разных пиццериях.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MannwhitneyuResult(statistic=59.0, pvalue=0.0029526029526029526)\n"
+      "0.0029526029526029526\n"
      ]
     }
    ],
    "source": [
     "import scipy.stats as stats\n",
     "#perform the Mann-Whitney U test\n",
-    "p=stats.mannwhitneyu (petersburg, magadan)\n",
-    "print(p)"
+    "_, p_value=stats.mannwhitneyu (petersburg, magadan)\n",
+    "print(p_value)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0029526029526029526 <= 0.05. Мы отвергаем нулевую гипотезу. Есть значимая разница между размером мидии в разных пиццериях.\n"
+     ]
+    }
+   ],
    "source": [
-    "0.003 < 0.05 Мы отвергаем нулевую гипотезу об отсутсвии зависимости между переменными."
+    "if p_value>alpha:\n",
+    "    print(f\"{p_value} > {alpha}. Мы не можем отвергнуть нулевую гипотезу. {H0}\")\n",
+    "else:\n",
+    "     print(f\"{p_value} <= {alpha}. Мы отвергаем нулевую гипотезу. {Ha}\")"
    ]
   },
   {
@@ -278,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
