--- a/Кодирование_признаков.ipynb
+++ b/Кодирование_признаков.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Кодирование_признаков.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,63 +14,60 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Загрузка данных"
-      ],
       "metadata": {
         "id": "z_Z6bFot2Oeg"
-      }
+      },
+      "source": [
+        "# Загрузка данных"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%capture\n",
-        "!wget https://www.dropbox.com/s/64ol9q9ssggz6f1/data_ford_price.xlsx"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "WXYdSwui2LKL"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%%capture\n",
+        "!wget https://www.dropbox.com/s/64ol9q9ssggz6f1/data_ford_price.xlsx"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = pd.read_excel('data_ford_price.xlsx') "
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "Wkm_a7aj2Sk_"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data = pd.read_excel('data_ford_price.xlsx') "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y = data['price']\n",
-        "X = data.drop(columns='price')"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "z4vgpzDc2Wlh"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "y = data['price']\n",
+        "X = data.drop(columns='price')"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Предобработка"
-      ],
       "metadata": {
         "id": "p1Woo8G12avl"
-      }
+      },
+      "source": [
+        "# Предобработка"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "lr = LinearRegression()\n",
-        "lr.fit(X,y)"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -94,12 +76,11 @@
         "id": "qAeVTF4N2YLb",
         "outputId": "bf4b235c-c2c7-4615-fcba-d27f4e021ada"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "ValueError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
@@ -112,20 +93,52 @@
             "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'clean'"
           ]
         }
+      ],
+      "source": [
+        "lr = LinearRegression()\n",
+        "lr.fit(X,y)"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vWNgsXjv3LTK"
+      },
       "source": [
         "_______________________\n",
         "Сторонний пример"
-      ],
-      "metadata": {
-        "id": "vWNgsXjv3LTK"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ugcPTwHa3OgT",
+        "outputId": "6b79c10f-fcd0-4a8a-cd5b-434a10f23cad"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "категории: ['BSc' 'MSc' 'PhD' 'начальное' 'нет' 'среднее']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0, 1, 0],\n",
+              "       [0, 1, 0, 0, 0, 0]])"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "from sklearn.preprocessing  import LabelBinarizer\n",
         " \n",
@@ -136,53 +149,20 @@
         " \n",
         "print('категории:', lb.classes_) \n",
         "lb.transform(['нет', 'MSc'])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ugcPTwHa3OgT",
-        "outputId": "6b79c10f-fcd0-4a8a-cd5b-434a10f23cad"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "категории: ['BSc' 'MSc' 'PhD' 'начальное' 'нет' 'среднее']\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0, 0, 0, 0, 1, 0],\n",
-              "       [0, 1, 0, 0, 0, 0]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "___________________________________"
-      ],
       "metadata": {
         "id": "GTiDn83d3S7s"
-      }
+      },
+      "source": [
+        "___________________________________"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "columns_to_change = ['cylinders', 'title_status', 'transmission', 'drive', 'size']\n",
-        " \n",
-        "for column in columns_to_change:\n",
-        " print('Число уникальных значений призкака {}: '.format(column), data[column].nunique())"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -190,11 +170,10 @@
         "id": "WTjBKN113APL",
         "outputId": "e1344eb5-7be9-47e2-ae5d-b0a9823adb83"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Число уникальных значений призкака cylinders:  6\n",
             "Число уникальных значений призкака title_status:  5\n",
@@ -203,21 +182,17 @@
             "Число уникальных значений призкака size:  4\n"
           ]
         }
+      ],
+      "source": [
+        "columns_to_change = ['cylinders', 'title_status', 'transmission', 'drive', 'size']\n",
+        " \n",
+        "for column in columns_to_change:\n",
+        " print('Число уникальных значений призкака {}: '.format(column), data[column].nunique())"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.preprocessing import OneHotEncoder\n",
-        " \n",
-        "one_hot_encoder = OneHotEncoder()\n",
-        " \n",
-        "# 'учим' и сразу применяем преобразование к выборке, результат переводим в массив\n",
-        "data_onehot = one_hot_encoder.fit_transform(data[columns_to_change]).toarray() \n",
-        "# запишем полученные названия новых колонок в отдельную переменную\n",
-        "column_names = one_hot_encoder.get_feature_names(columns_to_change)\n",
-        "print(column_names)"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -225,11 +200,10 @@
         "id": "vDYtJ8wu3cdH",
         "outputId": "60e0daa1-f4f7-449d-e584-ea5c86c85cac"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['cylinders_3' 'cylinders_4' 'cylinders_5' 'cylinders_6' 'cylinders_8'\n",
             " 'cylinders_10' 'title_status_clean' 'title_status_lien'\n",
@@ -240,14 +214,47 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
             "  warnings.warn(msg, category=FutureWarning)\n"
           ]
         }
+      ],
+      "source": [
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        " \n",
+        "one_hot_encoder = OneHotEncoder()\n",
+        " \n",
+        "# 'учим' и сразу применяем преобразование к выборке, результат переводим в массив\n",
+        "data_onehot = one_hot_encoder.fit_transform(data[columns_to_change]).toarray() \n",
+        "# запишем полученные названия новых колонок в отдельную переменную\n",
+        "column_names = one_hot_encoder.get_feature_names(columns_to_change)\n",
+        "print(column_names)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Кодирование_признаков.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.2"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
