--- a/MATH_ML-2._Практика._Ноутбук-шаблон.ipynb
+++ b/MATH_ML-2._Практика._Ноутбук-шаблон.ipynb
@@ -2039,7 +2039,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.10.8 ('base')",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -2057,7 +2057,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "86c56a74836ad344b00594bf6f38fa6a676a207ceefe20d101fbc465800ccb8d"
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
       }
     }
   },
