--- a/dst3-ml4-2_clusterization.ipynb
+++ b/dst3-ml4-2_clusterization.ipynb
@@ -1329,7 +1329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2 (default, Jun  8 2021, 11:59:35) \n[Clang 12.0.5 (clang-1205.0.22.11)]"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
