--- a/Python_and_SQL.ipynb
+++ b/Python_and_SQL.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "hs66HgVWqgRA",
       "metadata": {
         "id": "hs66HgVWqgRA"
@@ -46,11 +46,11 @@
         "# для запуска кода поместите данные, которые указаны на странице курса в эту ячейку\n",
         "# при размещении в github удалите эту ячейку]\n",
         "\n",
-        "DBNAME = 'skillfactory'\n",
-        "USER = 'skillfactory'\n",
-        "PASSWORD = 'cCkxxLVrDE8EbvjueeMedPKt'\n",
-        "HOST = '84.201.134.129'\n",
-        "PORT = 5432"
+        "DBNAME = 'NEWS_DATA'\n",
+        "USER = 'ev'\n",
+        "PASSWORD = 'ev'\n",
+        "HOST = '127.0.0.1'\n",
+        "PORT = 3306"
       ]
     },
     {
@@ -65,12 +65,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "70d84b8f",
       "metadata": {
         "id": "70d84b8f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "OperationalError",
+          "evalue": "connection to server at \"127.0.0.1\", port 5432 failed: Connection refused\n\tIs the server running on that host and accepting TCP/IP connections?\n",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+            "\u001b[1;32m/Users/sev/Documents/IDE/Python_and_SQL.ipynb Ячейка 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sev/Documents/IDE/Python_and_SQL.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m connection \u001b[39m=\u001b[39m psycopg2\u001b[39m.\u001b[39;49mconnect(\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sev/Documents/IDE/Python_and_SQL.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     dbname\u001b[39m=\u001b[39;49mDBNAME,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sev/Documents/IDE/Python_and_SQL.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     user\u001b[39m=\u001b[39;49mUSER,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sev/Documents/IDE/Python_and_SQL.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     host\u001b[39m=\u001b[39;49mHOST,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sev/Documents/IDE/Python_and_SQL.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     password\u001b[39m=\u001b[39;49mPASSWORD,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sev/Documents/IDE/Python_and_SQL.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     port\u001b[39m=\u001b[39;49mPORT\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sev/Documents/IDE/Python_and_SQL.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m )\n",
+            "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/psycopg2/__init__.py:122\u001b[0m, in \u001b[0;36mconnect\u001b[0;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     kwasync[\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    121\u001b[0m dsn \u001b[39m=\u001b[39m _ext\u001b[39m.\u001b[39mmake_dsn(dsn, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m--> 122\u001b[0m conn \u001b[39m=\u001b[39m _connect(dsn, connection_factory\u001b[39m=\u001b[39;49mconnection_factory, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwasync)\n\u001b[1;32m    123\u001b[0m \u001b[39mif\u001b[39;00m cursor_factory \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     conn\u001b[39m.\u001b[39mcursor_factory \u001b[39m=\u001b[39m cursor_factory\n",
+            "\u001b[0;31mOperationalError\u001b[0m: connection to server at \"127.0.0.1\", port 5432 failed: Connection refused\n\tIs the server running on that host and accepting TCP/IP connections?\n"
+          ]
+        }
+      ],
       "source": [
         "connection = psycopg2.connect(\n",
         "    dbname=DBNAME,\n",
